--- a/.github/workflows/stars.yml
+++ b/.github/workflows/stars.yml
@@ -22,4 +22,4 @@ jobs:
       - name: Ntfy
         run: |
           REPO="$(echo '${{ github.repository }}' | cut -d'/' -f2)"
-          curl -d "${{ github.actor }} starred $REPO" ${{ secrets.ntfy_url }}
+          curl -d "${{ github.actor }} starred your repository $REPO" ${{ secrets.ntfy_url }}
