--- a/.github/workflows/stars.yml
+++ b/.github/workflows/stars.yml
@@ -24,9 +24,15 @@ jobs:
           REPO="$(echo '${{ github.repository }}' | cut -d'/' -f2)"
           curl -H "Title: ${{ github.repository }}" -d "${{ github.actor }} starred your repository." ${{ secrets.ntfy_url }}
       - name: Telegram
-        uses: robotomize/notify-telegram@v0.1.0
+        id: send_message
+        uses: akeylimepie/telegram-action@main
         with:
-          chat: ${{ secrets.CHAT_ID }} # user id or channel name secret
-          token: ${{ secrets.BOT_TOKEN }} # token secret
-          status: ${{ job.status }} # do not modify this line
-          message: ${{ github.actor }} starred your repository ${{ github.repository }} # custom message
+          token: ${{ secrets.TOKEN }}
+          chat_id: ${{ secrets.CHAT_ID }}
+          message_thread_id: ${{ secrets.TOPIC_ID }}
+          parse_mode: html
+          disable_notification: true
+          text: |
+            ${{ github.actor }} starred your repository <a href="https://github.com/${{ github.repository }}">${{ github.repository }}</a>
+      - run: |
+          echo "Message ID: ${{ steps.send_message.outputs.message_id }}"# custom message
